
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ io_service_t ;
typedef int io_iterator_t ;
typedef int CFMutableDictionaryRef ;


 scalar_t__ IOIteratorNext (int ) ;
 scalar_t__ IOServiceGetMatchingServices (int ,int ,int *) ;
 int IOServiceMatching (char*) ;
 scalar_t__ IOServiceOpen (scalar_t__,int ,int,int *) ;
 scalar_t__ IO_OBJECT_NULL ;
 scalar_t__ KERN_SUCCESS ;
 int MACH_PORT_NULL ;
 int conn ;
 int kIOMasterPortDefault ;
 int mach_task_self () ;
 int printf (char*,...) ;

int InitService(char *IoServiceName)
{
    int type;
    io_service_t service;
    CFMutableDictionaryRef matching;
    io_iterator_t iterator;

    printf("InitService: Trying: %s \n", IoServiceName);

    matching = IOServiceMatching(IoServiceName);

    if( !matching)
    {
        printf("Initservice: IOServiceMatching() failed \n");
        return -1;
    }

    if (IOServiceGetMatchingServices(kIOMasterPortDefault, matching, &iterator) != KERN_SUCCESS)
    {
        printf("InitService: IOServiceGetMatchingServices failed \n");
        return -1;
    }


    service = IOIteratorNext(iterator);
    if (service == IO_OBJECT_NULL)
    {
        printf("InitService: IOIteratorNext failed \n");
        return -1;
    }


    type = 0;
    conn = MACH_PORT_NULL;
    if (IOServiceOpen(service, mach_task_self(), 5, &conn) != KERN_SUCCESS)
    {
        printf("InitService: IOServiceOpen failed! \n");
        return -1;
    }

    printf("InitService: service ok! \n");
    return 1;
}
